--- a/3-UsingAPIs/Week1/homework/index.html
+++ b/3-UsingAPIs/Week1/homework/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <script src="/3-UsingAPIs/Week1/homework/ex1-johnWho.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script src="/3-UsingAPIs/Week1/homework/ex2-checkDoubleDigits.js"></script>
+  </body>
 </html>
