--- a/3-UsingAPIs/Week1/homework/index.html
+++ b/3-UsingAPIs/Week1/homework/index.html
@@ -7,6 +7,32 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/3-UsingAPIs/Week1/homework/ex2-checkDoubleDigits.js"></script>
+    <script src="/3-UsingAPIs/Week1/homework/ex3-rollDie.js"></script>
   </body>
 </html>
+
+'use strict';
+/*------------------------------------------------------------------------------
+Full description at:
+https://github.com/HackYourFuture/Homework/tree/main/3-UsingAPIs/Week1#exercise-3-roll-a-die
+- Run the unmodified program and confirm that problem described occurs. -
+Refactor the `rollDie()` function from callback-based to returning a promise. -
+Change the calls to `callback()` to calls to `resolve()` and `reject()`. -
+Refactor the code that call `rollDie()` to use the promise it returns. - Does
+the problem described above still occur? If not, what would be your explanation?
+Add your answer as a comment to be bottom of the file.
+------------------------------------------------------------------------------*/
+function rollDie() { return new Promise((resolve, reject) => { const
+randomRollsToDo = Math.floor(Math.random() * 8) + 3; console.log(`Die scheduled
+for ${randomRollsToDo} rolls...`); const rollOnce = (roll) => { const value =
+Math.floor(Math.random() * 6) + 1; console.log(`Die value is now: ${value}`); //
+Use callback to notify that the die rolled off the table after 6 rolls if (roll
+> 6) { reject(new Error('Oops... Die rolled off the table.')); } // Use callback
+to communicate the final die value once finished rolling if (roll ===
+randomRollsToDo) { resolve(value); } // Schedule the next roll todo until no
+more rolls to do if (roll < randomRollsToDo) { setTimeout(() => rollOnce(roll +
+1), 500); } // Start the initial roll }; rollOnce(1); }); } function main() {
+rollDie() .then((value) => { console.log(`Success! Die settled on ${value}.`);
+}) .catch((error) => { console.log(error.message); }); } // ! Do not change or
+remove the code below if (process.env.NODE_ENV !== 'test') { main(); }
+module.exports = rollDie;
